# LMD-imaging

./: .gitignore  README.md  df_2.csv  pyproject.toml
src/lmd_imaging/: __init__.py  main.py  training.py
src/lmd_imaging/labeling/: __init__.py  common.py  manual.py  plotting.py  yolo.py
