[project]
name = "lmd-imaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=1.26.3",
    "opencv-python>=4.10.0.84",
    "scikit-learn>=1.5.2",
    "ultralytics>=8.3.27",
]

[project.optional-dependencies]
gpu = [
    "torch==2.5.1+cu124; platform_system == 'Windows' or platform_system == 'Linux'",
]

[project.scripts]
lmd_imaging = "lmd_imaging:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "mypy>=1.11.2",
    "ruff>=0.6.5",
]

[tool.black]
line-length = 120
target-version = ['py312']
