[project]
name = "lmd-imaging"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "matplotlib>=3.10.1",
    "numpy>=1.26.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "ultralytics>=8.3.97",
]

[project.optional-dependencies]
gpu = [
    "torch==2.6.0+cu126; platform_system == 'Windows' or platform_system == 'Linux'",
    "torch==2.6.0; platform_system == 'Darwin'",
]

[project.scripts]
lmd_imaging = "lmd_imaging:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.9.0",
    "mypy>=1.18.2",
    "ruff>=0.14.2",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.mypy]
python_version = "3.12"
